--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.0",
     "stripe": "^14.2.0",
