--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^1.10.1",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@firebase/app": "^0.9.20",
     "@firebase/auth": "^1.3.0",
+    "@kommunicate/kommunicate-chatbot-plugin": "^0.0.7",
     "@mui/material": "^5.14.13",
     "@paypal/react-paypal-js": "^8.1.3",
     "@react-google-maps/api": "^2.19.2",
@@ -16,12 +19,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-mic": "^12.4.5",
     "animate.css": "^4.1.1",
-    "axios": "^1.5.1",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.5.2",
+    "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^6.3.0",
+    "mic-recorder-to-mp3": "^2.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
@@ -31,6 +37,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
+    "react-speech-recognition": "^3.10.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.0",
