--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/styled": "^11.11.0",
     "@firebase/app": "^0.9.20",
     "@firebase/auth": "^1.3.0",
+    "@google-pay/button-react": "^3.0.10",
     "@kommunicate/kommunicate-chatbot-plugin": "^0.0.7",
     "@mui/material": "^5.14.13",
     "@paypal/react-paypal-js": "^8.1.3",
